data/derived/sp14/progs/unify/prog4507.ml.out
Characters 163-179:
  let base = (List.combine (rev l1, rev l2), []) in
                           ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
